<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titleNewNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/autour_one"
        android:paddingTop="25dp"
        android:text="@string/new_note_title"
        android:textColor="#616161"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edTitle"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/new_note_edit_title"
        android:inputType="textMultiLine"
        android:textSize="20sp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleNewNote"
        app:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/edDescription"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="145dp"
        android:autofillHints=""
        android:hint="@string/new_note_edit_description"
        android:inputType="textMultiLine"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edTitle"
        app:layout_editor_absoluteX="16dp" />

    <CheckBox
        android:id="@+id/chIdea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_note_idea"
        android:textColor="#004d40"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edDescription" />

    <CheckBox
        android:id="@+id/chTodo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_note_todo"
        android:textColor="#004d40"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chIdea" />

    <CheckBox
        android:id="@+id/chImportant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_note_important"
        android:textColor="#004d40"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chTodo"/>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="140dp"
        android:text="@string/new_note_button_cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chImportant" />

    <Button
        android:id="@+id/btnOk"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="16dp"
        android:text="@string/new_note_button_OK"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chImportant" />


</androidx.constraintlayout.widget.ConstraintLayout>